# video-demo

./: .gitignore  CMakeLists.txt
include/: frame_batch.hpp  frame_extractor.hpp  video_reader.hpp
src/: frame_extractor.cpp  minimal_frame_extract.cpp  minimal_video_read_test.cpp  video_reader.cpp
